--- a/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
@@ -125,7 +125,7 @@ In particolare, è richiesto che l'utente dell'editor abbia un certo grado di fa
 Per garantire inoltre una comprensione accurata e completa dell'insieme di funzionalità implementate, il prodotto sarà corredato di un manuale utente completo delle indicazioni necessarie per poterne fruire in modo efficace.
 
 \subsection{Piattaforma di esecuzione}
-Il prodotto sviluppato risulterà fruibile da qualsiasi piattaforma desktop con operante un browser web compatibile con le tecnologie \gloss{HTML}5, \gloss{CSS}3 e \gloss{Java}Script. In particolare, l'elenco dei browser il cui supporto è garantito è contenuto nella sezione \ref{sec:reqvincolo} relativa ai requisiti di vincolo.
+Il prodotto sviluppato risulterà fruibile da qualsiasi piattaforma desktop con operante un browser web compatibile con le tecnologie \gloss{HTML5}, \gloss{CSS3} e \gloss{JavaScript}. In particolare, l'elenco dei browser il cui supporto è garantito è contenuto nella sezione \ref{sec:reqvincolo} relativa ai requisiti di vincolo.
 
 \subsection{Vincoli generali}
 Si tiene conto dei seguenti vincoli:
@@ -1703,7 +1703,7 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 	\item \textbf{Descrizione}: l'attore inserisce il contenuto in codice del blocco custom;
 	\item \textbf{Precondizione}: l'attore ha selezionato un blocco custom da inserire e il sistema visualizza il form per l'inserimento dei dati;
 	\item \textbf{Postcondizione}: il sistema ha ricevuto il dato richiesto;
-	\item \textbf{Scenario principale}: l'attore deve inserire il contenuto in codice del blocco custom in Java, il linguaggio target di generazione del codice dell'applicativo.
+	\item \textbf{Scenario principale}: l'attore deve inserire il contenuto in codice del blocco custom in \gloss{Java}, il linguaggio target di generazione del codice dell'applicativo.
 \end{itemize}
 
 \paragraph{UC5.6.2: Inserimento Commento Blocco Custom}
@@ -3051,7 +3051,7 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 \endhead
 \hypertarget{RVO1}{RVO1} & l'applicativo deve essere sviluppato tramite tecnologie web. & \hyperlink{Capitolato}{Capitolato}\\ \hline
 
-\hypertarget{RVO1.1}{RVO1.1} & l'applicativo lato \gloss{client} è realizzato in \gloss{HTML5}, CSS e Javascript. & \hyperlink{Capitolato}{Capitolato}\\ \hline
+\hypertarget{RVO1.1}{RVO1.1} & l'applicativo lato \gloss{client} è realizzato in HTML5, \gloss{CSS} e Javascript. & \hyperlink{Capitolato}{Capitolato}\\ \hline
 
 \hypertarget{RVO1.2}{RVO1.2} & l'applicativo lato server è realizzato in Java con server \gloss{Tomcat}. & \hyperlink{Capitolato}{Capitolato}\\ \hline
 
@@ -3065,7 +3065,7 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 
 \hypertarget{RVD1.7}{RVD1.7} & l'applicativo funziona su Microsoft Edge versione 25 o superiore & \hyperlink{Interno}{Interno}\\ \hline
 
-\hypertarget{RVO2}{RVO2} & il progetto deve essere sviluppato sulla piattaforma \gloss{Git}Hub in modalità pubblica & \hyperlink{Capitolato}{Capitolato}\\ \hline
+\hypertarget{RVO2}{RVO2} & il progetto deve essere sviluppato sulla piattaforma \gloss{GitHub} in modalità pubblica & \hyperlink{Capitolato}{Capitolato}\\ \hline
 
 \caption[Requisiti di Vincolo]{Requisiti di Vincolo}
 \label{tabella:req3}
