--- a/doc/Esterni/Piano_di_progetto/Rev_Piano_Progetto.tex
+++ b/doc/Esterni/Piano_di_progetto/Rev_Piano_Progetto.tex
@@ -123,7 +123,7 @@ Questi ultimi punti entrano in netto contrasto con i requisiti inizialmente prop
 
 Ciò si può realizzare principalmente tramite due strumenti differenti: lo \emph{exploratory development} e il \emph{throwaway prototyping}.
 
-Il primo consiste nel lavorare a fianco del \gloss{client}e per esplorare i suoi requisiti e infine consegnare un sistema adeguato. Mentre questo metodo di lavoro potrebbe sembrare positivo, esso presenta due grosse criticità: 
+Il primo consiste nel lavorare a fianco del cliente per esplorare i suoi requisiti e infine consegnare un sistema adeguato. Mentre questo metodo di lavoro potrebbe sembrare positivo, esso presenta due grosse criticità: 
 \begin{itemize}
 \item Cambiamenti continui tendono a corrompere la struttura e l'architettura del software;
 \item Aggiungere estensioni non previste diventa progressivamente più complesso e costoso. 
@@ -249,7 +249,7 @@ Per ogni rischio viene fornito un elenco di informazioni, necessario per compren
 			\item[Probabilità di occorrenza] bassa;
 			\item[Grado di pericolosità] medio;
 			\item[Riconoscimento] ogni membro del team avrà cura dei propri strumenti hardware verificandone giornalmente il completo funzionamento;
-			\item[Trattamento] prima di qualunque spostamento, è obbligatorio {\color{blue}sincronizzare}{\color{red}scaricare} sul server \gloss{Git}Hub i file modificati. Se ciò non fosse possibile per assenza di collegamento ad Internet, è obbligatorio copiare i propri avanzamenti su almeno un dispositivo di memoria esterno secondario. Per il server che ospita PragmaDB, è previsto un sistema di \gloss{backup} automatico ogni 7 giorni e in caso di malfunzionamenti sarà compito dell’\AM{} riportare tale macchina in uno stato funzionante nel minor tempo possibile; 
+			\item[Trattamento] prima di qualunque spostamento, è obbligatorio {\color{blue}sincronizzare}{\color{red}scaricare} sul server \gloss{GitHub} i file modificati. Se ciò non fosse possibile per assenza di collegamento ad Internet, è obbligatorio copiare i propri avanzamenti su almeno un dispositivo di memoria esterno secondario. Per il server che ospita PragmaDB, è previsto un sistema di \gloss{backup} automatico ogni 7 giorni e in caso di malfunzionamenti sarà compito dell’\AM{} riportare tale macchina in uno stato funzionante nel minor tempo possibile; 
 			\item[Attuazione nel periodo]:
 			\begin{description}
 				\item[Analisi dei requisiti] il rischio non si è mai verificato.
