--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
@@ -2,7 +2,7 @@
 % da compilare con il comando pdflatex Piano_di_Qualifica_x.x.x.tex
 
 \input{../../util/hx-ambiente}
-\use\gloss{package}{float}
+\usepackage{float}
 
 \version{1.0.0}
 \creaz{28 dicembre 2016}
@@ -466,7 +466,7 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 			\end{itemize}
 			
 			\paragraph[Grado di accoppiamento]{\hypertarget{ga}{Grado di accoppiamento}}
-			Tale metrica è una misura del numero di dipendenze di una classe con le altre contenute all'interno del suo stesso package. Avere poche dipendenze tra classi implica che ci sia un maggiore grado di disaccoppiamento. Questo aumenta molto la manutenibilità e la comprensibilità del codice.
+			Tale metrica è una misura del numero di dipendenze di una classe con le altre contenute all'interno del suo stesso \gloss{package}. Avere poche dipendenze tra classi implica che ci sia un maggiore grado di disaccoppiamento. Questo aumenta molto la manutenibilità e la comprensibilità del codice.
 			\\I range stabiliti per la metrica sono i seguenti:
 			\begin{itemize}
 				\item Range ottimale: 0-3;
