--- a/doc/Esterni/Specifica_tecnica/Specifica_tecnica.tex
+++ b/doc/Esterni/Specifica_tecnica/Specifica_tecnica.tex
@@ -24,12 +24,12 @@
 \section{Introduzione}
 \input{tex/intro}
 
-% - scelta di framework, librerie etc...
+% - scelta di \gloss{framework}, librerie etc...
 % - interfacce con tali tecnologie
 \section{Tecnologie utilizzate}
 \input{tex/tecnologie}
 
-% - diagramma dei package
+% - diagramma dei \gloss{package}
 % - scelte architetturali
 % - altre cose ad alto livello
 \section{Descrizione dell'architettura}
@@ -41,7 +41,7 @@
 \section{Componenti}
 \input{tex/componenti}
 
-% JSON, client-server... ???
+% JSON, \gloss{client}-\gloss{server}... ???
 \section{Modelli dei dati e interfacce}
 \input{tex/modelli}
 
