--- a/doc/Interni/Studio_di_fattibilita/Studio_di_fattibilita_1_0_0.tex
+++ b/doc/Interni/Studio_di_fattibilita/Studio_di_fattibilita_1_0_0.tex
@@ -37,7 +37,7 @@
 		\subsubsection{Informativi}
 		\begin{itemize}
 			\item \textbf{Glossario}: \Glossario;
-			\item \textbf{Capitolato d'Appalto C1}, \emph{\gloss{API}M}: An API Market Platform
+			\item \textbf{Capitolato d'Appalto C1}, \emph{APIM}: An \gloss{API} Market Platform
 			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C1.pdf};
 			\item \textbf{Capitolato d'Appalto C2}, \emph{AtAVi}: Accoglienza tramite Assistente Virtuale
 			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C2.pdf};
@@ -71,11 +71,11 @@
 		codice e quanto disegnato nei diagrammi stessi e sperimentare la possibilità di avvicinare le due fasi di progettazione e codifica, esplorando le 
 		interazioni e le eventuali estensioni necessarie a legare fra loro queste due fasi.
 		\subsubsection{Studio del dominio}
-			\paragraph{Dominio applicativo} Il dominio applicativo del seguente capitolato riguarda l'ambito della generazione di codice a partire dal linguaggio UML. Il prodotto si rivolge quindi, ad un target di programmatori interessati alla creazione di programmi appartenenti all'ambito dei giochi da tavolo. I \gloss{client}i verranno guidati durante il percorso di realizzazione del proprio prodotto, ma dovranno possedere una certa esperienza e conoscenza nell'ambito della programmazione software, del linguaggio UML e dei suoi diagrammi.
+			\paragraph{Dominio applicativo} Il dominio applicativo del seguente capitolato riguarda l'ambito della generazione di codice a partire dal linguaggio UML. Il prodotto si rivolge quindi, ad un target di programmatori interessati alla creazione di programmi appartenenti all'ambito dei giochi da tavolo. I clienti verranno guidati durante il percorso di realizzazione del proprio prodotto, ma dovranno possedere una certa esperienza e conoscenza nell'ambito della programmazione software, del linguaggio UML e dei suoi diagrammi.
 			
 			\paragraph{Dominio tecnologico}
 			Il capitolato richiede che il sistema sia realizzato con tecnologie Web. In particolare la parte \gloss{server} deve essere realizzata in Java con il server 
-			\gloss{Tomcat} o in Javascript con il server \gloss{Node.js}. La parte client, invece, deve essere eseguibile in un browser \gloss{HTML}5 ed utilizzare fogli di stile \gloss{CSS} per 
+			\gloss{Tomcat} o in Javascript con il server \gloss{Node.js}. La parte \gloss{client}, invece, deve essere eseguibile in un browser \gloss{HTML5} ed utilizzare fogli di stile \gloss{CSS} per 
 			l'aspetto estetico e JavaScript per la parte attiva.
 		
 		\subsubsection{Aspetti positivi e negativi}
@@ -121,7 +121,7 @@
 			\paragraph{Dominio tecnologico}
 			Per quanto riguarda il set di tecnologie da utilizzarsi, ItalianaSoftware richiede ai gruppi impegnati sul progetto:
 			\begin{itemize}
-			\item di sviluppare il front end della web application con l'ausilio della terna JavaScript, HTML e \gloss{CSS3};
+			\item di sviluppare il front end della web application con l'ausilio della terna JavaScript, \gloss{HTML} e \gloss{CSS3};
 			\item di scegliere tra una base di dati \gloss{SQL} o NoSQL per quanto riguarda il database.\\
 			\end{itemize}
 			L'azienda suggerisce fortemente di utilizzare per la rappresentazione delle interfacce e per la creazione del marketplace
@@ -293,7 +293,7 @@
 				\item \gloss{SCSS} per l'interfaccia utente.
 			\end{itemize}
 			Viene inoltre richiesto che il codice sorgente di Monolith e la relativa versione dimostrativa siano pubblicate e versionate utilizzando 
-			\gloss{Git}Hub o \gloss{Bitbucket}.
+			\gloss{GitHub} o \gloss{Bitbucket}.
 		\subsubsection{Aspetti positivi e negativi}
 		L'ambito applicativo del progetto risulta sicuramente ricco di spunti interessanti, soprattutto per l'importanza cruciale che i client di 
 		messaggistica odierni hanno assunto nello scambio di informazioni.
