--- a/doc/Esterni/Piano_di_qualifica/revisione_PdQ.tex
+++ b/doc/Esterni/Piano_di_qualifica/revisione_PdQ.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper]{article}
-\use\gloss{package}[T1]{fontenc}
+\usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[english,italian]{babel}
 \usepackage{microtype}
