creati file di struttra per ST

--- a/doc/Esterni/Specifica_tecnica/Specifica_tecnica.tex
+++ b/doc/Esterni/Specifica_tecnica/Specifica_tecnica.tex
@@ -4,9 +4,9 @@
 \input{../../util/hx-ambiente}
 
 \version{0.0.1}
-\creaz{12 febbraio 2017}
-\author{\GG, \MM}
-\supervisor{\LB, \AZ}
+\creaz{15 febbraio 2017}
+\author{...}
+\supervisor{...}
 \uso{esterno}
 \dest{\ALL}
 \title{Specifica Tecnica}
@@ -33,7 +33,7 @@
 % - scelte architetturali
 % - altre cose ad alto livello
 \section{Descrizione dell'architettura}
-\input{tex/architettura}
+\input{tex/arch}
 
 % ---> distinguere STRUTTURA (classi) da COMPORTAMENTO (procedure)?
 % - diagrammi delle classi
@@ -50,7 +50,6 @@
 \section{Stime di fattibilità}
 \input{tex/fattibil}
 
-% ---> forse meglio come subsection di "Componenti"?
 % - tracciamento componenti-reqq
 % - tracciamento reqq-componenti
 \section{Tracciamento}
