spostata sez 'fattibilità'

--- a/doc/Esterni/Specifica_tecnica/Specifica_tecnica.tex
+++ b/doc/Esterni/Specifica_tecnica/Specifica_tecnica.tex
@@ -20,7 +20,8 @@
 
 
 
-% introduzione standard
+% - introduzione standard
+% - stime di fattibilità
 \section{Introduzione}
 \input{tex/intro}
 
@@ -44,11 +45,6 @@
 % JSON, client-server... ???
 \section{Modelli dei dati e interfacce}
 \input{tex/modelli}
-
-% ---> forse meglio come subsection di "Introduzione"?
-% poche righe sulla fattibilità di ciò che progettiamo
-\section{Stime di fattibilità}
-\input{tex/fattibil}
 
 % - tracciamento componenti-reqq
 % - tracciamento reqq-componenti
