--- a/doc/Esterni/Specifica_tecnica/tex/intro.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/intro.tex
@@ -21,3 +21,6 @@ Questo documento ha lo scopo di definire, ad alto livello, l'architettura softwa
 
 \subsubsection{Riferimenti informativi}
 % ...
+
+\subsection{Stime di fattibilità}
+% [fattibilità di ciò che progettiamo]
