generazione elenco design pattern

--- a/doc/Esterni/Specifica_tecnica/tex/intro.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/intro.tex
@@ -4,9 +4,7 @@
 
 \subsection{Scopo del documento}
 Questo documento ha lo scopo di definire, ad alto livello, l'architettura software di \proj; ci focalizziamo quindi sulla \emph{struttura} del software, cioè sulla descrizione delle sue componenti. L'implementazione del nostro software è a oggetti; per questo, le componenti descritte sono classi e loro istanze.
-
-% \subsection{Struttura del documento}
-% utile?
+% Ecco una prova di pattern: \pattern{Observer}
 
 \subsection{Scopo del prodotto}
 \scopo
