--- a/doc/util/hx-ambiente.tex
+++ b/doc/util/hx-ambiente.tex
@@ -16,6 +16,7 @@
 \usepackage{longtable}
 \usepackage{chngpage}
 \usepackage{grffile}
+\usepackage[titles]{tocloft}
 \usepackage{hyperref}
 \hypersetup{hidelinks}
 
