capitolo tecnologie e piccole macro

--- a/doc/util/hx-macro.sty
+++ b/doc/util/hx-macro.sty
@@ -95,3 +95,17 @@ Per rendere più facile la lettura, la prima occorrenza di ogni termine presente
 \refstepcounter{pattern}
 \emph{#1}
 \addcontentsline{pat}{pattern}{\protect\numberline{\thepattern}#1}}
+
+
+
+
+\newcommand{\js}{\emph{Javascript}}
+\newcommand{\jointjs}{\emph{JointJS}}
+\newcommand{\html}{\emph{HTML5}}
+\newcommand{\jquery}{\emph{jQuery}}
+\newcommand{\lodash}{\emph{Lo-Dash}}
+\newcommand{\backbonejs}{\emph{Backbone.js}}
+\newcommand{\tomcat}{\emph{Apache Tomcat}}
+\newcommand{\spring}{\emph{Spring}}
+\newcommand{\mvc}{\emph{MVC}}
+\newcommand{\requirejs}{\emph{RequireJS}}
