--- a/doc/Esterni/Specifica_tecnica/tex/tecnologie.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/tecnologie.tex
@@ -8,30 +8,35 @@
 Per implementare il client di \proj{} abbiamo scelto di utilizzare HTML5 e CSS3 assieme a JavaScript. Di seguito elenchiamo e descriviamo le librerie JavaScript di cui il nostro client necessita. Tutte le librerie sono open-source, come richiesto dal capitolato.
 
 \subsubsection{JointJS}
-JointJS (\url{https://www.jointjs.com/opensource}) è una libreria open-source per visualizzare e manipolare grafi (e quindi diagrammi). Dipende da HTML5 e da alcune altre librerie JavaScript ma offre numerosi plug-in per realizzare particolari tipi di grafi.
+La libreria \jointjs{} (\url{https://www.jointjs.com/opensource}) è una libreria open-source per realizzare editor di diagrammi interattivi, in maniera altamente personalizzabile. %Dipende da HTML5 e da alcune altre librerie JavaScript ma offre numerosi plug-in per realizzare particolari tipi di grafi.
 
-JointJS dipende da:
+La libreria sfrutta le seguenti tecnologie per il suo funzionamento:
+
 \begin{itemize}
-	\item HTML5: JointJS richiede che una pagina HTML5 sia popolata con un tag \texttt{<canvas>}, che conterrà un grafo.
-	\item Le seguenti librerie JavaScript:
+	\item \html{}: \jointjs{} richiede che una pagina \html{} sia popolata con un tag \texttt{<svg>}, che conterrà un diagramma.
+	\item Le seguenti librerie \js{}:
 	\begin{itemize}
-		\item JQuery;
-		\item Lodash;
-		\item Backbone.js.
+		\item \jquery{};
+		\item \lodash{};
+		\item \backbonejs{}.
 	\end{itemize}
 \end{itemize}
 
-il client di \proj{} utilizza un plug-in di JointJS che facilita la creazione di una particolare categoria di grafi: i diagrammi UML. [\dots]
+\subsubsection{\backbonejs}
+La libreria \backbonejs{} permette di strutturare applicazioni web single page (\gloss{SPA}) fornendo \textbf{modelli} con binding di chiave-valore, eventi, \textbf{collezioni} e \textbf{viste} con una gestione degli eventi dichiarativa. Essa offre inoltre una interfaccia \gloss{RESTful}.
 
-\subsubsection{Backbone.js}
-% ...
-
-\subsubsection{JQuery}
-% ...
-
-%%% [altro...]
+A causa della struttura data alla libreria \jointjs{}, sviluppata tramite MVC (collection), al fine di ridurre il numero di librerie necessarie allo sviluppo del progetto, si costruirà \proj{} estendendo le funzionalità di base offerte da \jointjs{} usando il modello \mvc{}.
 
 
+\subsubsection{\jquery}
+La libreria \jquery{} è sfruttata da \jointjs{} ed è necesaria per semplificare varie operazioni di basso livello. 
+
+
+\subsubsection{\requirejs}
+La libreria \requirejs{} è un loader di moduli e file \js{}. Esso si occuperà principalmente di risolvere dipendenze delle librerie \js{} utilizzate.
+
+\subsubsection{\lodash}
+La libreria \lodash{} fornisce metodi di utilità non offerti da \js{} puro. Rispetto alla simile libreria \emph{Underscore}, questa fornisce più performance, più features e miglior documentazione. Essa inoltre è usata da \jointjs{}.
 
 \subsection{Server}
 
